# drakkar

./: .gitignore  README.md  cache_calls.txt  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
docs/: cache.md  calculator.md  config-reference.md  configuration.md  data-flow.md  deployment.md  executor.md  fan-out.md  faq.md  handler.md  index.md  integration.md  observability.md  performance.md  sinks.md
docs/plans/: 20260406-review-fixes.md  20260421-handler-cache.md
docs/plans/completed/: 20260421-handler-cache.md
docs/stylesheets/: extra.css
drakkar/: __init__.py  app.py  app_security.py  cache.py  cache_engine.py  cache_memory.py  cache_models.py  cache_sql.py  cli.py  config.py  consumer.py  db.py  debug_runner.py  debug_runner_helpers.py  debug_runner_models.py  debug_server.py  debug_server_helpers.py  executor.py  handler.py  logging.py  merge.py  metrics.py  models.py  offsets.py  partition.py  peer_discovery.py  periodic.py  producer.py  recorder.py  recorder_helpers.py  recorder_schema.py  utils.py  viking.py
drakkar/sinks/: __init__.py  base.py  dlq.py  filesystem.py  http.py  kafka.py  manager.py  mongo.py  postgres.py  redis.py
drakkar/templates/: _kafka_ui_icon.html  base.html  cache.html  dashboard.html  debug.html  executors.html  history.html  live.html  partition_detail.html  partitions.html  sinks.html  task_detail.html  trace.html  vikings.html
integration/: Dockerfile.producer  Dockerfile.worker  chaos-test.sh  docker-compose.yml  drakkar.yaml  generate_sample_data.py  handler.py  init-db.sql  init-kafka.sh  producer.py  run-rg.sh  worker.py
integration/fast-worker/: Dockerfile  count-symbols.sh  drakkar.yaml  handler.py  main.py  models.py
integration/infra/: Dockerfile.producer  init-db-hot.sql  init-db.sql  init-kafka.sh  producer.py  prometheus.yml  webhook-hooks.json  webhook.py
integration/sample_data/: sample_0.txt  sample_1.txt  sample_2.txt  sample_3.txt  sample_4.txt  sample_5.txt  sample_6.txt  sample_7.txt  sample_8.txt  sample_9.txt
integration/shared/: .gitignore  README.md
integration/worker/: Dockerfile  drakkar.yaml  entrypoint.sh  handler.py  main.py  metrics.py  models.py
scripts/: bump.sh  replay_dlq.py
tests/: conftest.py  test_app.py  test_cache_api.py  test_cache_cleanup.py  test_cache_config.py  test_cache_engine_lifecycle.py  test_cache_flush.py  test_cache_metrics.py  test_cache_models.py  test_cache_peer_sync.py  test_cache_sync_apply.py  test_cache_sync_cursor.py  test_cache_sync_pull.py  test_config.py  test_config_modes.py  test_consumer.py  test_db.py  test_debug_runner.py  test_debug_server.py  test_debug_server_cache.py  test_entrypoint.py  test_executor.py  test_handler.py  test_handler_cache.py  test_logging.py  test_merge.py  test_metrics.py  test_models.py  test_offsets.py  test_partition.py  test_peer_discovery.py  test_periodic.py  test_producer.py  test_recorder.py  test_replay_dlq.py  test_sink_manager.py  test_sinks.py  test_utils.py  test_viking.py
